tests/did-you-mean.stderr
error: cannot find `print`
  ┌─ test:1:1
  │
1 │ print "hello"
  │ ^^^^^
  │ │
  │ this name is not defined
  │ did you mean `show`?
  │
  = replace with `show`: `show`
  = for more information, see https://wipple.dev/playground/?lesson=errors/undefined-name

error: cannot find `hello`
  ┌─ test:2:6
  │
2 │ show hello
  │      ^^^^^
  │      │
  │      this name is not defined
  │      if you meant to provide text here, try using quotes: `"hello"`
  │
  = surround with quotes: `"hello"`
  = for more information, see https://wipple.dev/playground/?lesson=errors/undefined-name

error: cannot find `//`
  ┌─ test:3:13
  │
3 │ sum : 1 + 2 // comment
  │             ^^
  │             │
  │             this name is not defined
  │             comments in Wipple begin with `--`
  │
  = replace with `--`: `--`
  = for more information, see https://wipple.dev/playground/?lesson=errors/undefined-name

error: cannot find `comment`
  ┌─ test:3:16
  │
3 │ sum : 1 + 2 // comment
  │                ^^^^^^^ this name is not defined
  │
  = for more information, see https://wipple.dev/playground/?lesson=errors/undefined-name

